feat: Set up Prisma ORM with initial schema, migrations, and Docker Compose for PostgreSQL, updating package scripts and gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,21 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# prisma
+/src/generated/prisma
+prisma/migrations/.DS_Store
+
+# docker volumes (optional - only if you're not sharing db state)
+# postgres_data
+
+# IDE
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.idea/
+*.swp
+*.swo
+*~
